<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddNewTask">

        <!--    <RelativeLayout-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="match_parent"-->
        <!--        android:background="@android:color/white"-->
        <!--        android:paddingBottom="@dimen/activity_vertical_margin"-->
        <!--        android:paddingLeft="@dimen/activity_horizontal_margin"-->
        <!--        android:paddingRight="@dimen/activity_horizontal_margin"-->
        <!--        android:paddingTop="@dimen/activity_vertical_margin"-->
        <!--        tools:context=".activities.NewItem">-->

    <TextView
        android:id="@+id/txtNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/new_task_title"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <EditText
        android:id="@+id/edtNewTask"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_enter_task_here"
        android:textColorHint="#B8BFC2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNewTask"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/edtDisplayDate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:hint="@string/date_hint"
        android:textColor="@android:color/black"
        android:textColorHint="#B8BFC2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="74dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:text="@string/txtDate"

        android:textColor="?attr/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewTask"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDisplayDate"
        android:onClick="btnAddOnClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>